[package]
name = "log2hex"
version = "0.1.0"
authors = ["itchyny <itchyny@cybozu.co.jp>"]
description = "Arbitrary place hexadecimal digits viewer of log(2) written in Rust"
repository = "https://github.com/itchyny/log2hex"
readme = "README.md"
license = "MIT"
keywords = ["math"]
categories = ["algorithms"]
edition = "2021"

[profile.release]
lto = true
strip = true
codegen-units = 1

[dependencies]
clap = "4.4.8"
thiserror = "1.0.50"

[[bin]]
name = "log2hex"
doc = false
